# OS_system_lab

./: 实验一报告模板.docx
os_lab1/: check_file.sh  main.c  process_demo  process_demo.c  sys_info.c  sys_info.h  sys_monitor  thread_demo
os_lab2/: meson.build  os_lab2.c  thread_pool  thread_pooling.cpp  threadpool(1).c.bak  实验二报告参考答案.md  实验二报告模板.docx
os_lab3/: .xdp-.~三报告_已填写.docx-43jG1J  coroutine.c  coroutine.cpp  meson.build  os_lab3.docx  实验三报告_已填写.docx  实验三报告模板.docx  操作系统实验三_用户态线程协程_已填写.docx
os_lab4/: .~lock.Exp4_学生手册.pdf#  hook_malloc.c  hook_malloc.cpp  meson.build  mm.c  mm.cpp  my_malloc.c  test_my_malloc.c  实验四报告模板.docx
os_lab5/: .~lock.Exp5_参考手册.pdf#  .~lock.Exp5_学生手册.pdf#  meson.build  mini_vmem.cpp  os_lab5.cpp  os_lab5.docx  vm_observe.cpp  实验五报告模板.docx
os_lab5/exp5/: mini_vmem_dirty_tracking.c  mini_vmem_fifo.c  mini_vmem_second_chance.c
os_lab5/exp5_meson_project/: meson.build  mini_vmem_second_chance.c  vm_observe.c
os_lab6/: memfs.c  meson.build  os_lab6.docx  实验六报告模板.docx
os_lab7/: 实验七报告模板.docx
